<resources>
    <string name="app_name">JourneyTracker</string>
    <!-- names for the navigation bar -->
    <string name="title_home">Home</string>
    <string name="title_compass">Compass</string>
    <string name="title_saved_routes">Results</string>

    <!-- Button names -->
    <string name="start_button">Start</string>
    <string name="ready_button">Ready</string>
    <string name="stop_button">Stop</string>
    <string name="start_practise">Start practice</string>
    <string name="center_button">Center</string>

    <!--fragment_add_target -->
    <string name="add_target_info">Press (hold) to add markers</string>

    <!--fragment_metawear -->
    <string name="metawear_compass">Metawear compass</string>
    <string name="internal_compass">Internal compass</string>



    <!--fragment_result_details -->
    <string name="date">Date</string>
    <string name="timer">Time</string>
    <string name="distance">Distance</string>




    <!--fragment_orienteering -->
    <string name="start_meters">0 m</string>
    <string name="exit_toast">Press Back again to Exit.</string>
    <string name="gps_location_toast">Please turn your location on</string>
    <string name="tracking_starts_in_a_minute">Location tracking starts in one minute...</string>


    <!-- -->


</resources>
