<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/date"
            android:gravity="bottom"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/timer"
            android:gravity="bottom"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/textView5"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/distance"
            android:gravity="bottom"
            android:id="@+id/textView3"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="19sp"/>

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" />
</LinearLayout>