<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.valtteri.journeytracker.route.tracking.OrienteeringFragment">


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/centerButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="8dp"
        android:text="@string/center_button"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/stopWatch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/metersTotal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/start_meters"
            android:textColor="@color/textColorPrimary"
            android:textSize="30sp" />

        <Button
            android:id="@+id/stop_button"
            style="@style/ButtonTheme"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/stopbutton_bg_rounded_corners"
            android:text="@string/stop_button" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
